--- a/index.html
+++ b/index.html
@@ -15,6 +15,29 @@
 			display: flex;
 			justify-content: space-between;
 		}
+		.cart {
+			position: absolute;
+			right: 2em;
+			top: 4em;
+			width: 12em;
+			list-style: none;
+			margin: 0;
+			padding: 0;
+			background-color: white;
+		}
+		.cart li {
+			display: flex;
+			justify-content: space-between;
+			padding: 0.5em 1em;
+		}
+
+		.cart li p {
+			margin: 0;
+		}
+
+		.cart li:nth-of-type(odd) {
+			background-color: lightgrey;
+		}
 	</style>
 </head>
 <body>
