add option to remove from cart version 1

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 	</template>
 
 	<template id="cartContent">
-		<li>
+		<li class="productItem">
 			<p class="productTitle"></p>
 			<p class="productPrice"></p>
 		</li>
